# yA0tzy

./: .gitignore  Cargo.toml  Makefile  RALPH_TASK.md  RALPH_TASK_TUI.md  README.md  rustfmt.toml
.github/workflows/: ci.yml
configs/: continuous_cand_2.yaml  ext_smoke1.yaml  local_cpu.yaml  nvirt_only_realistic10.yaml  nvirt_only_smoke10.yaml  p1_throughput_explore.yaml  p6_replay100.yaml  p8.yaml  p9.yaml
configs/oracle_sets/: README.md  fixed_balanced_v1.json  fixed_v1.json
configs/seed_sets/: dev_v1.txt
documentation/: ARCHITECTURE.md  EPIC_CHANCE_NODES_AFTERSTATES.md  ORACLE_FIXED_SET_E2E.md  PROFILING.md  TUI_FEATURES_PLAN.md  prd.md
python/: README.md  pyproject.toml
python/tests/: test_capabilities.py  test_checkpoint_contract.py  test_config_snapshot.py  test_infer_metrics.py  test_infer_protocol_v1.py  test_infer_protocol_v2.py  test_learn_summary_unittest.py  test_model_and_loss.py  test_model_init.py  test_model_kinds_unittest.py  test_model_spec_path.py  test_optimizer_reset_boundary.py  test_replay_dataset.py  test_replay_snapshot.py  test_run_manifest.py  test_server_torch_threads.py  test_torch_model_backend.py  test_train_metrics_stream.py  test_train_steps_semantics.py  test_wandb_sync.py
python/yatzy_az/: __init__.py  __main__.py  config.py  replay_dataset.py  replay_snapshot.py  run_manifest.py  train.py  wandb_sync.py
python/yatzy_az/infer_server/: __init__.py  batcher.py  model.py  server.py
python/yatzy_az/model/: __init__.py  init.py  net.py
python/yatzy_az/server/: __init__.py  batcher.py  bench_codec_v1.py  checkpoint.py  debug_log.py  metrics.py  metrics_server.py  model.py  protocol_v1.py  server.py
python/yatzy_az/trainer/: __init__.py  train.py
rust/swedish_yatzy_dp/: Cargo.toml
rust/swedish_yatzy_dp/src/: lib.rs
rust/swedish_yatzy_dp/src/eval/: mod.rs
rust/swedish_yatzy_dp/src/game/: mod.rs
rust/swedish_yatzy_dp/src/oracle/: mod.rs
rust/yz-bench/: Cargo.toml
rust/yz-bench-e2e/: Cargo.toml
rust/yz-bench-e2e/src/: lib.rs  main.rs
rust/yz-bench/benches/: legal.rs  protocol.rs  puct.rs  scoring.rs
rust/yz-bench/src/: lib.rs
rust/yz-cli/: Cargo.toml
rust/yz-cli/src/: main.rs
rust/yz-cli/tests/: bench_e2e.rs  gate.rs  iter_finalize.rs  profile.rs
rust/yz-controller/: Cargo.toml
rust/yz-controller/src/: lib.rs
rust/yz-controller/tests/: controller_e2e_two_iters.rs  controller_e2e_two_iters_mps.rs
rust/yz-core/: Cargo.toml
rust/yz-core/src/: action.rs  action_legal_tests.rs  chance.rs  chance_tests.rs  config.rs  engine.rs  engine_tests.rs  legal.rs  lib.rs  scoring.rs  scoring_tests.rs  state.rs  state_tests.rs
rust/yz-eval/: Cargo.toml
rust/yz-eval/src/: lib.rs
rust/yz-features/: Cargo.toml
rust/yz-features/src/: encode.rs  lib.rs  schema.rs
rust/yz-infer/: Cargo.toml
rust/yz-infer/src/: client.rs  client_tests.rs  codec.rs  frame.rs  lib.rs  protocol.rs
rust/yz-logging/: Cargo.toml
rust/yz-logging/src/: lib.rs
rust/yz-mcts/: Cargo.toml
rust/yz-mcts/src/: afterstate.rs  arena.rs  infer.rs  infer_client.rs  lib.rs  mcts.rs  mcts_tests.rs  node.rs  state_key.rs
rust/yz-mcts/tests/: python_infer_e2e.rs
rust/yz-oracle/: Cargo.toml
rust/yz-oracle/src/: golden_tests.rs  lib.rs
rust/yz-replay/: Cargo.toml
rust/yz-replay/src/: lib.rs  schema.rs  writer.rs  writer_tests.rs
rust/yz-runtime/: Cargo.toml
rust/yz-runtime/src/: game_task.rs  lib.rs  runtime_tests.rs  scheduler.rs
rust/yz-tui/: Cargo.toml
rust/yz-tui/src/: config_io.rs  form.rs  lib.rs  validate.rs
