[workspace]
resolver = "2"
members = [
  "rust/yz-core",
  "rust/yz-features",
  "rust/yz-mcts",
  "rust/yz-runtime",
  "rust/yz-infer",
  "rust/yz-replay",
  "rust/yz-eval",
  "rust/yz-oracle",
  "rust/yz-logging",
  "rust/yz-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"


