[workspace]
resolver = "2"
members = [
  "rust/yz-core",
  "rust/yz-features",
  "rust/yz-mcts",
  "rust/yz-runtime",
  "rust/yz-infer",
  "rust/yz-replay",
  "rust/yz-eval",
  "rust/yz-oracle",
  "rust/yz-logging",
  "rust/yz-cli",
  "rust/swedish_yatzy_dp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

# Optimize dev/test builds for the heavy oracle DP computation
# Without this, tests take minutes instead of seconds
[profile.dev.package.swedish_yatzy_dp]
opt-level = 3

[profile.test.package.swedish_yatzy_dp]
opt-level = 3

[profile.dev.package.yz-oracle]
opt-level = 3

[profile.test.package.yz-oracle]
opt-level = 3


