[workspace]
resolver = "2"
members = [
  "rust/yz-core",
  "rust/yz-features",
  "rust/yz-mcts",
  "rust/yz-runtime",
  "rust/yz-infer",
  "rust/yz-replay",
  "rust/yz-eval",
  "rust/yz-oracle",
  "rust/yz-logging",
  "rust/yz-cli",
  "rust/yz-bench",
  "rust/yz-bench-e2e",
  "rust/yz-tui",
  "rust/yz-controller",
  "rust/swedish_yatzy_dp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

# Optimize dev/test builds for the heavy oracle DP computation
# Without this, tests take minutes instead of seconds
[profile.dev.package.swedish_yatzy_dp]
opt-level = 3

[profile.test.package.swedish_yatzy_dp]
opt-level = 3

[profile.dev.package.yz-oracle]
opt-level = 3

[profile.test.package.yz-oracle]
opt-level = 3

# Self-play is CPU-heavy; speed up dev/test builds for core search/runtime crates.
# This keeps the TUI usable without requiring `--release` for every run.
[profile.dev.package.yz-mcts]
opt-level = 3

[profile.test.package.yz-mcts]
opt-level = 3

[profile.dev.package.yz-runtime]
opt-level = 3

[profile.test.package.yz-runtime]
opt-level = 3

[profile.dev.package.yz-infer]
opt-level = 3

[profile.test.package.yz-infer]
opt-level = 3

[profile.dev.package.yz-core]
opt-level = 3

[profile.test.package.yz-core]
opt-level = 3

[profile.dev.package.yz-features]
opt-level = 3

[profile.test.package.yz-features]
opt-level = 3


