[project]
name = "yatzy-az"
version = "0.1.0"
description = "AlphaZero-style training for 2-player Yatzy"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Andreas Hornqvist" }
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
yatzy-az = "yatzy_az.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yatzy_az"]
