[project]
name = "yatzy-az"
version = "0.1.0"
description = "AlphaZero-style training for 2-player Yatzy"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Andreas Hornqvist" }
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "safetensors>=0.4",
    # Required for inference + training.
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0",
]

#

[project.scripts]
yatzy-az = "yatzy_az.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yatzy_az"]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["yatzy_az"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
