[package]
name = "yz-bench-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yz-core = { path = "../yz-core" }
yz-infer = { path = "../yz-infer" }
yz-mcts = { path = "../yz-mcts" }
yz-runtime = { path = "../yz-runtime" }


