[package]
name = "yz-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yz"
path = "src/main.rs"

[dependencies]
yz-core = { path = "../yz-core" }
yz-features = { path = "../yz-features" }
yz-mcts = { path = "../yz-mcts" }
yz-runtime = { path = "../yz-runtime" }
yz-infer = { path = "../yz-infer" }
yz-replay = { path = "../yz-replay" }
yz-eval = { path = "../yz-eval" }
yz-oracle = { path = "../yz-oracle" }
yz-logging = { path = "../yz-logging" }
yz-controller = { path = "../yz-controller" }
yz-tui = { path = "../yz-tui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

