[package]
name = "yz-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "1"
yz-core = { path = "../yz-core" }
yz-logging = { path = "../yz-logging" }
yz-features = { path = "../yz-features" }
yz-infer = { path = "../yz-infer" }
yz-mcts = { path = "../yz-mcts" }
yz-runtime = { path = "../yz-runtime" }
yz-replay = { path = "../yz-replay" }
yz-eval = { path = "../yz-eval" }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"


