[package]
name = "yz-eval"
version = "0.1.0"
edition = "2021"

[dependencies]
yz-core = { path = "../yz-core" }
yz-mcts = { path = "../yz-mcts" }
yz-infer = { path = "../yz-infer" }
yz-oracle = { path = "../yz-oracle" }
thiserror = "1.0"
blake3 = "1"
serde = { version = "1", features = ["derive"] }

