[package]
name = "yz-mcts"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
yz-core = { path = "../yz-core" }
yz-features = { path = "../yz-features" }
thiserror = "1"
rustc-hash = "2"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"

