[package]
name = "yz-mcts"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
yz-core = { path = "../yz-core" }
yz-features = { path = "../yz-features" }
yz-infer = { path = "../yz-infer" }
thiserror = "1"
rustc-hash = "2"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde_json = "1"

[features]
# Expose small helpers used only by Criterion benches (no API stability guarantee).
bench = []

[dev-dependencies]
tempfile = "3"

