[package]
name = "yz-replay"
version = "0.1.0"
edition = "2021"

[dependencies]
yz-core = { path = "../yz-core" }
yz-features = { path = "../yz-features" }
bytemuck = "1"
safetensors = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

