[package]
name = "yz-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
yz-core = { path = "../yz-core" }
yz-mcts = { path = "../yz-mcts" }
yz-infer = { path = "../yz-infer" }
yz-features = { path = "../yz-features" }
yz-replay = { path = "../yz-replay" }
thiserror = "1"


