[package]
name = "yz-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
yz-core = { path = "../yz-core" }
yz-mcts = { path = "../yz-mcts" }
yz-infer = { path = "../yz-infer" }
yz-features = { path = "../yz-features" }
yz-replay = { path = "../yz-replay" }
yz-logging = { path = "../yz-logging" }
thiserror = "1"
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"

[dev-dependencies]
serde_json = "1"
tempfile = "3"

