[package]
name = "yz-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
yz-core = { path = "../yz-core" }
yz-logging = { path = "../yz-logging" }
serde_yaml = "0.9"
yz-controller = { path = "../yz-controller" }

[dev-dependencies]
tempfile = "3"


