[package]
name = "yz-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
yz-core = { path = "../yz-core" }
yz-logging = { path = "../yz-logging" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = { version = "2", features = ["json"] }
yz-controller = { path = "../yz-controller" }
sysinfo = "0.33"

[dev-dependencies]
tempfile = "3"


